<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utslrc.cecati124.proyecto.agregarInstructores">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="601dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />


    <ImageButton
        android:id="@+id/ibCapacitaciones"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/chartbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <ImageButton
        android:id="@+id/ibCursos"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@+id/ibCapacitaciones"
        app:srcCompat="@drawable/calendarmultiple"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/ibInstructores"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@+id/ibCursos"
        app:srcCompat="@drawable/account"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/ibDashboard"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@+id/ibInstructores"
        app:srcCompat="@drawable/clipboardtext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/ibUsuario"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintLeft_toRightOf="@+id/ibDashboard"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="perfil"
        app:srcCompat="@drawable/accountcircle" />

    <TextView
        android:id="@+id/tvLista"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:text="@string/agregarInstructores"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="443dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLista"
        tools:layout_editor_absoluteY="113dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/nombres"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNombres"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Nombres"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/apellidos"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Apellidos"
                app:layout_constraintTop_toBottomOf="@+id/etNombres"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/telefono"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Telefono o Celular"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/etApellidos" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/direccion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etDirrecion"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Direccion"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/etTelefono" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/correo"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Correo Electronico"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/etDireccion" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/tipo"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:hint="Privilegios"
                app:layout_constraintTop_toBottomOf="@+id/etCorreo"
                />

            <TextView
                android:id="@+id/tvContrasena1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/contrasena1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etContrasena1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Contraseña"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/spTipo" />

            <TextView
                android:id="@+id/tvContrasena2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/contrasena2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etContrasena2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_label"
                android:ems="10"
                android:hint="Repita la Contraseña"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/etContrasena1" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.46"
                android:text="@string/fecha"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/etContrasena2" />

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.05"
                android:background="@drawable/style_buttom"
                android:text="@string/guardar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>

